@@ -1,3 +1,7 @@
+Tue Mar 23 20:36:39 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* b-group-by.rb: REQ#203対応(完了)
+
 Tue Mar 23 19:03:17 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* b-group-by.rb: REQ#203対応(その2)
